--- a/ong.html
+++ b/ong.html
@@ -161,7 +161,7 @@
                     <i class="fas fa-map-marker-alt"></i>
                 </div>
                 <div class="column-text">
-                    <h4>SEDE - Viamonte 1050</h4>
+                    <h4>SEDE - Montevideo 1050</h4>
                     <h4>Recoleta - CABA</h4>
                     <h4>Buenos Aires - Argentina</h4>
                 </div>
@@ -177,7 +177,7 @@
             </div>
         </div>
         <div class="column">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1483905316195!2d-58.3819191!3d-34.600409!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac88b88a913%3A0xba1640765135e1d3!2sViamonte%201050%2C%20C1049%20CABA!5e0!3m2!1ses-419!2sar!4v1703066900449!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.2959679360247!2d-58.3900418!3d-34.596676699999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccabec38a4a6d%3A0x8a2a4e0fd10e24f7!2sMontevideo%201050%2C%20C1019ABV%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1717335271331!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
     <div class="legales">
