--- a/abj2.html
+++ b/abj2.html
@@ -207,14 +207,14 @@
                 </div>
             </div>
         </div>
-        <div class="btn-curso-contenedor">
+        <!-- <div class="btn-curso-contenedor"> -->
             <!-- <div class="btn-masthead btn-curso">
                 <a href="https://mpago.la/1oygFRm" class="btn">empieza ya</a>
             </div> -->
-            <div class="btn-masthead">
+            <!-- <div class="btn-masthead">
                 <a href="https://n9.cl/abj2-cursovirtual" class="btn">Inscripción</a>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- PREGUNTAS FRECUENTES -->
     <div class="abj-contendor">
