--- a/escape.html
+++ b/escape.html
@@ -209,14 +209,14 @@
                 </div>
             </div>
         </div>
-        <div class="btn-curso-contenedor">
+        <!-- <div class="btn-curso-contenedor"> -->
             <!-- <div class="btn-masthead btn-curso">
                 <a href="https://mpago.la/1dKQcgA" class="btn">empieza ya</a>
             </div> -->
-            <div class="btn-masthead">
+            <!-- <div class="btn-masthead">
                 <a href="https://forms.gle/peEoXzsSW3Cyx4Xn6" class="btn">Inscripción</a>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- PREGUNTAS FRECUENTES -->
     <!-- <div class="preguntas-title">
