--- a/inscripcion.html
+++ b/inscripcion.html
@@ -108,10 +108,10 @@
         </div>
         <div class="col-2">
             <div class="text-masthead">
-                <h3>Ingreso Marzo 2024</h3>
+                <h3>Ingreso Marzo 2025</h3>
             </div><br><br>
             <div class="btn-masthead">
-                <a href="https://forms.gle/wduuhvWsQF3RFB9s9" class="btn">Formulario</a>
+                <a href="https://forms.gle/hoxVGV876SAKJfpT7" class="btn">Formulario</a>
             </div>
         </div>
     </div>
