--- a/titeres.html
+++ b/titeres.html
@@ -223,14 +223,14 @@
                 </div>
             </div>
         </div>
-        <div class="btn-curso-contenedor">
+        <!-- <div class="btn-curso-contenedor"> -->
             <!-- <div class="btn-masthead btn-curso">
                 <a href="https://mpago.la/2mkgxRr" class="btn">empieza ya</a>
             </div> -->
-            <div class="btn-masthead">
+            <!-- <div class="btn-masthead">
                 <a href="https://forms.gle/azE9p5KegdoXoYjK9" class="btn">Inscripción</a>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- PREGUNTAS FRECUENTES -->
     <div class="curso-img-contenedor">
