--- a/abj1.html
+++ b/abj1.html
@@ -108,14 +108,14 @@
         <div class="col-1 cursos-color-text">
             <p>CO-CREANDO UN MUNDO CON MAS JUEGOS</p>
         </div>
-        <div class="col-2">
+        <!-- <div class="col-2">
             <div class="text-masthead">
                 <p>Inscripciones al curso</p>
             </div>
             <div class="btn-masthead">
                 <a href="https://n9.cl/abj1-cursovirtual" class="btn">Inscripción</a>
             </div>
-        </div>
+        </div> -->
     </div>
     <!-- CURSO -->
     <div class="contenedor-col-curso">
